warehouse20/monitorr/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: monitorr
  namespace: warehouse20
  labels:
    app: monitorr
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 80
      protocol: TCP
  selector:
    app: monitorr

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: monitorr
  name: monitorr
  namespace: warehouse20
spec:
  serviceName: monitorr
  replicas: 1
  selector:
    matchLabels:
      app: monitorr
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: monitorr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: monitorr
        image: monitorr/monitorr:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /settings.php
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /settings.php
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /app
          name: data
      volumes:
      - name: data
        nfs:
          path: /mnt/ssd01/k8s/warehouse20/monitorr
          server: 172.20.1.10
